--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack</title>
+  <title>BlackjackCaes</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -59,95 +59,95 @@ if(strWho =="You")
  //var x = document.createElement("IMG");
  
 if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình quân bài
-	document.getElementById("userDIV").src="ace_of_spades.png";};
+	document.getElementById("userCards").src="ace_of_spades.png";};
 if (card2=="Ace" && suit=="Clubs"){
-	document.getElementById("userDIV").src= "ace_of_clubs.png";};
+	document.getElementById("userCards").src= "ace_of_clubs.png";};
 if (card2=="Ace" && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "ace_of_diamonds.png";};
+	document.getElementById("userCards").src= "ace_of_diamonds.png";};
 if (card2=="Ace" && suit=="Hearts"){
-	document.getElementById("userDIV").src= "ace_of_hearts.png";};
+	document.getElementById("userCards").src= "ace_of_hearts.png";};
 if (card==2 && suit=="Spades"){
-	document.getElementById("userDIV").src= "2_of_spades.png";};
+	document.getElementById("userCards").src= "2_of_spades.png";};
 if (card==2 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "2_of_clubs.png";};
+	document.getElementById("userCards").src= "2_of_clubs.png";};
 if (card==2 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "2_of_diamonds.png";};
+	document.getElementById("userCards").src= "2_of_diamonds.png";};
 if (card==2 && suit=="Hearts"){
-	document.getElementById("userDIV").src= "2_of_hearts.png";};
+	document.getElementById("userCards").src= "2_of_hearts.png";};
 if (card==3 && suit=="Spades"){
-	document.getElementById("userDIV").src= "3_of_spades.png";};
+	document.getElementById("userCards").src= "3_of_spades.png";};
 if (card==3 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "3_of_clubs.png";};
+	document.getElementById("userCards").src= "3_of_clubs.png";};
 if (card==3 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "3_of_diamonds.png";};
+	document.getElementById("userCards").src= "3_of_diamonds.png";};
 if (card==3 && suit=="Hearts"){
-	document.getElementById("userDIV").src="3_of_hearts.png";};
+	document.getElementById("userCards").src="3_of_hearts.png";};
 if (card==4 && suit=="Spades"){
-	document.getElementById("userDIV").src= "4_of_spades.png";};
+	document.getElementById("userCards").src= "4_of_spades.png";};
 if (card==4 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "4_of_clubs.png";};
+	document.getElementById("userCards").src= "4_of_clubs.png";};
 if (card==4 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "4_of_diamonds.png";};
+	document.getElementById("userCards").src= "4_of_diamonds.png";};
 if (card==4 && suit=="Hearts"){
-	document.getElementById("userDIV").src= "4_of_hearts.png";};
+	document.getElementById("userCards").src= "4_of_hearts.png";};
 if (card==5 && suit=="Spades"){
-	document.getElementById("userDIV").src= "5_of_spades.png";};
+	document.getElementById("userCards").src= "5_of_spades.png";};
 if (card==5 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "5_of_clubs.png";};
+	document.getElementById("userCards").src= "5_of_clubs.png";};
 if (card==5 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "5_of_diamonds.png";};
+	document.getElementById("userCards").src= "5_of_diamonds.png";};
 if (card==5 && suit=="Hearts"){
-	document.getElementById("userDIV").src="5_of_hearts.png";};
+	document.getElementById("userCards").src="5_of_hearts.png";};
 if (card==6 && suit=="Spades"){
-	document.getElementById("userDIV").src= "6_of_spades.png";}	;
+	document.getElementById("userCards").src= "6_of_spades.png";}	;
 if (card==6 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "6_of_clubs.png";}	;
+	document.getElementById("userCards").src= "6_of_clubs.png";}	;
 if (card==6 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "6_of_diamonds.png";}	;
+	document.getElementById("userCards").src= "6_of_diamonds.png";}	;
 if (card==6 && suit=="Hearts"){
-	document.getElementById("userDIV").src= "6_of_hearts.png";}	;
+	document.getElementById("userCards").src= "6_of_hearts.png";}	;
 if (card==7 && suit=="Spades"){
-	document.getElementById("userDIV").src= "7_of_spades.png";}	;
+	document.getElementById("userCards").src= "7_of_spades.png";}	;
 if (card==8 && suit=="Spades"){
-	document.getElementById("userDIV").src= "8_of_spades.png";}	;
+	document.getElementById("userCards").src= "8_of_spades.png";}	;
 if (card==9 && suit=="Spades"){
-	document.getElementById("userDIV").src= "9_of_spades.png";}	;
+	document.getElementById("userCards").src= "9_of_spades.png";}	;
 if (card==10 && suit=="Spades"){
-	document.getElementById("userDIV").src= "10_of_spades.png";}	;
+	document.getElementById("userCards").src= "10_of_spades.png";}	;
 if (card2=="Jack" && suit=="Spades"){
-	document.getElementById("userDIV").src= "jack_of_spades2.png";}	;
+	document.getElementById("userCards").src= "jack_of_spades2.png";}	;
 if (card2=="Queen" && suit=="Spades"){
-	document.getElementById("userDIV").src= "queen_of_spades2.png";}	;
+	document.getElementById("userCards").src= "queen_of_spades2.png";}	;
 if (card2=="King" && suit=="Spades"){
-	document.getElementById("userDIV").src= "king_of_spades2.png";}	;
+	document.getElementById("userCards").src= "king_of_spades2.png";}	;
 if (card==7 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "7_of_clubs.png";}	;
+	document.getElementById("userCards").src= "7_of_clubs.png";}	;
 if (card==8 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "8_of_clubs.png";}	;
+	document.getElementById("userCards").src= "8_of_clubs.png";}	;
 if (card==9 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "9_of_clubs.png";}	;
+	document.getElementById("userCards").src= "9_of_clubs.png";}	;
 if (card==10 && suit=="Clubs"){
-	document.getElementById("userDIV").src= "10_of_clubs.png";}	;
+	document.getElementById("userCards").src= "10_of_clubs.png";}	;
 if (card2=="Jack" && suit=="Clubs"){
-	document.getElementById("userDIV").src= "jack_of_clubs2.png";}	;
+	document.getElementById("userCards").src= "jack_of_clubs2.png";}	;
 if (card2=="Queen" && suit=="Clubs"){
-	document.getElementById("userDIV").src= "queen_of_clubs2.png";}	;
+	document.getElementById("userCards").src= "queen_of_clubs2.png";}	;
 if (card2=="King" && suit=="Clubs"){
-	document.getElementById("userDIV").src= "king_of_clubs2.png";}	;
+	document.getElementById("userCards").src= "king_of_clubs2.png";}	;
 if (card2==7 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "7_of_diamonds.png";}	;
+	document.getElementById("userCards").src= "7_of_diamonds.png";}	;
 if (card==8 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "8_of_diamonds.png";}	;
+	document.getElementById("userCards").src= "8_of_diamonds.png";}	;
 if (card==9 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "9_of_diamonds.png";}	;
+	document.getElementById("userCards").src= "9_of_diamonds.png";}	;
 if (card==10 && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "10_of_diamonds.png";}	;
+	document.getElementById("userCards").src= "10_of_diamonds.png";}	;
 if (card2=="Jack" && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "jack_of_diamonds2.png";}	;
+	document.getElementById("userCards").src= "jack_of_diamonds2.png";}	;
 if (card2=="Queen" && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "queen_of_diamonds2.png";}	;
+	document.getElementById("userCards").src= "queen_of_diamonds2.png";}	;
 if (card2=="King" && suit=="Diamonds"){
-	document.getElementById("userDIV").src= "king_of_diamonds2.png";}	;
+	document.getElementById("userCards").src= "king_of_diamonds2.png";}	;
 
 
 
@@ -272,6 +272,6 @@ window.onload = setBj;
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<img id="userDIV" src="" style="width:120px;height:160px">
+<img id="userCards" scr="" alt="Player's card" style="width:120px;height:160px">
 </body>
 </html>
