--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<!--<style>	
+<style>	
 #userDIV {
     border: 1px solid black;
     margin-bottom: 10px;
@@ -11,9 +11,9 @@
     border: 1px solid black;
     margin-bottom: 10px;
 }	
-</style>-->	
+</style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>BlackjackCaes</title>
+  <title>BlackjackDIV</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -263,10 +263,11 @@ window.onload = setBj;
 </table>
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<!--<div id="userDIV">
+<div id="userDIV">
 	Player 's cards
+	<img id="userCards" scr="" alt="Player's card" style="width:120px;height:160px">
 </div>
-<div id="dealerDIV">
+<!--<div id="dealerDIV">
 	 Dealer
 </div>-->
 	
