--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>BlackjackDIV</title>
+  <title>BlackjackFONT</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -264,7 +264,7 @@ window.onload = setBj;
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 <div id="userDIV">
-	Player 's cards
+	<p style="font-size:500%;font-family:Comic Sans MS:">Player 's cards</p>
 	<img id="userCards" scr="" alt="Player's card" style="width:120px;height:160px">
 </div>
 <!--<div id="dealerDIV">
@@ -273,6 +273,5 @@ window.onload = setBj;
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<img id="userCards" scr="" alt="Player's card" style="width:120px;height:160px">
 </body>
 </html>
