--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>BlackjackFONT</title>
+  <title>Blackjack</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -264,8 +264,8 @@ window.onload = setBj;
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 <div id="userDIV">
-	<p style="font-size:500%;font-family:Comic Sans MS:">Player 's cards</p>
-	<img id="userCards" scr="" alt="Player's card" style="width:120px;height:160px">
+	<p style="font-size:150%;font-family:Comic Sans MS:">Player 's cards</p>
+	<img id="userCards" scr="" style="width:150px;height:200px">
 </div>
 <!--<div id="dealerDIV">
 	 Dealer
