--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -112,7 +112,7 @@ if (card==8 && suit=="Spades"){
 	document.getElementById("userCards").src= "8_of_spades.png";}	;
 if (card==9 && suit=="Spades"){
 	document.getElementById("userCards").src= "9_of_spades.png";}	;
-if (card==10 && suit=="Spades"){
+if (card2==10 && suit=="Spades"){
 	document.getElementById("userCards").src= "10_of_spades.png";}	;
 if (card2=="Jack" && suit=="Spades"){
 	document.getElementById("userCards").src= "jack_of_spades2.png";}	;
@@ -126,7 +126,7 @@ if (card==8 && suit=="Clubs"){
 	document.getElementById("userCards").src= "8_of_clubs.png";}	;
 if (card==9 && suit=="Clubs"){
 	document.getElementById("userCards").src= "9_of_clubs.png";}	;
-if (card==10 && suit=="Clubs"){
+if (card2==10 && suit=="Clubs"){
 	document.getElementById("userCards").src= "10_of_clubs.png";}	;
 if (card2=="Jack" && suit=="Clubs"){
 	document.getElementById("userCards").src= "jack_of_clubs2.png";}	;
@@ -140,7 +140,7 @@ if (card==8 && suit=="Diamonds"){
 	document.getElementById("userCards").src= "8_of_diamonds.png";}	;
 if (card==9 && suit=="Diamonds"){
 	document.getElementById("userCards").src= "9_of_diamonds.png";}	;
-if (card==10 && suit=="Diamonds"){
+if (card2==10 && suit=="Diamonds"){
 	document.getElementById("userCards").src= "10_of_diamonds.png";}	;
 if (card2=="Jack" && suit=="Diamonds"){
 	document.getElementById("userCards").src= "jack_of_diamonds2.png";}	;
@@ -148,6 +148,21 @@ if (card2=="Queen" && suit=="Diamonds"){
 	document.getElementById("userCards").src= "queen_of_diamonds2.png";}	;
 if (card2=="King" && suit=="Diamonds"){
 	document.getElementById("userCards").src= "king_of_diamonds2.png";}	;
+if (card2==7 && suit=="Hearts"){
+	document.getElementById("userCards").src= "7_of_hearts.png";}	;
+if (card==8 && suit=="Hearts"){
+	document.getElementById("userCards").src= "8_of_hearts.png";}	;
+if (card==9 && suit=="Hearts"){
+	document.getElementById("userCards").src= "9_of_hearts.png";}	;
+if (card2==10 && suit=="Hearts"){
+	document.getElementById("userCards").src= "10_of_hearts.png";}	;
+if (card2=="Jack" && suit=="Hearts"){
+	document.getElementById("userCards").src= "jack_of_hearts2.png";}	;
+if (card2=="Queen" && suit=="Hearts"){
+	document.getElementById("userCards").src= "queen_of_hearts2.png";}	;
+if (card2=="King" && suit=="Hearts"){
+	document.getElementById("userCards").src= "king_of_hearts2.png";}	;
+
 
 
 
