--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -6,15 +6,16 @@
 #userDIV {
     border: 1px solid black;
     margin-bottom: 10px;
-	width: 400px;
+	
 }	
 #dealerDIV {
     border: 1px solid black;
     margin-bottom: 10px;
+	
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack</title>
+  <title>Blackjack.</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -72,8 +73,8 @@ card2=cardName(card);
 if(strWho =="You")
 {document.display.say2.value=(cardName(card) + " of " + suit);  //say2 là bài của người chơi
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
  //var x = document.createElement("IMG");
- 
 if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình quân bài của player
 	document.getElementById("userCards").src="ace_of_spades.png";};
 if (card2=="Ace" && suit=="Clubs"){
@@ -178,27 +179,131 @@ if (card2=="Queen" && suit=="Hearts"){
 	document.getElementById("userCards").src= "queen_of_hearts2.png";}	;
 if (card2=="King" && suit=="Hearts"){
 	document.getElementById("userCards").src= "king_of_hearts2.png";}	;
- 
  //x.setAttribute("width", "304");
    // x.setAttribute("height", "228");
     //x.setAttribute("alt", "card");
- 
- 
 //document.getElementById("userDIV").appendChild(x);
  
 // @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 }
-else
-document.display.say1.value=(cardName(card) + " of " + suit); //say1 là bài của máy (dealer)
+else {
+document.display.say1.value=(cardName(card) + " of " + suit);} //say1 là bài của máy (dealer)
 return cardValue(card,strWho);
 }
 	  
 function NewHand(form){  //bắt đầu ván mới, called khi ấn DEAL
-if(gameOver !=0) //gameOver là biến boolean thì phải, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
+if(gameOver !=0) //gameOver là biến kiểu boolean, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
 {form.say1.value=("Hand in Play!"); form.say2.value=(""); return;} 
 else
 {form.dealer.value = 0; form.you.value = 0; cardCount=0;
 form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");
+
+if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình quân bài của Dealer
+	document.getElementById("dealerCards").src="ace_of_spades.png";};
+if (card2=="Ace" && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "ace_of_clubs.png";};
+if (card2=="Ace" && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "ace_of_diamonds.png";};
+if (card2=="Ace" && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "ace_of_hearts.png";};
+if (card==2 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "2_of_spades.png";};
+if (card==2 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "2_of_clubs.png";};
+if (card==2 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "2_of_diamonds.png";};
+if (card==2 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "2_of_hearts.png";};
+if (card==3 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "3_of_spades.png";};
+if (card==3 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "3_of_clubs.png";};
+if (card==3 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "3_of_diamonds.png";};
+if (card==3 && suit=="Hearts"){
+	document.getElementById("dealerCards").src="3_of_hearts.png";};
+if (card==4 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "4_of_spades.png";};
+if (card==4 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "4_of_clubs.png";};
+if (card==4 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "4_of_diamonds.png";};
+if (card==4 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "4_of_hearts.png";};
+if (card==5 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "5_of_spades.png";};
+if (card==5 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "5_of_clubs.png";};
+if (card==5 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "5_of_diamonds.png";};
+if (card==5 && suit=="Hearts"){
+	document.getElementById("dealerCards").src="5_of_hearts.png";};
+if (card==6 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "6_of_spades.png";}	;
+if (card==6 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "6_of_clubs.png";}	;
+if (card==6 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "6_of_diamonds.png";}	;
+if (card==6 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "6_of_hearts.png";}	;
+if (card==7 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "7_of_spades.png";}	;
+if (card==8 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "8_of_spades.png";}	;
+if (card==9 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "9_of_spades.png";}	;
+if (card==10 && suit=="Spades"){
+	document.getElementById("dealerCards").src= "10_of_spades.png";}	;
+if (card2=="Jack" && suit=="Spades"){
+	document.getElementById("dealerCards").src= "jack_of_spades2.png";}	;
+if (card2=="Queen" && suit=="Spades"){
+	document.getElementById("dealerCards").src= "queen_of_spades2.png";}	;
+if (card2=="King" && suit=="Spades"){
+	document.getElementById("dealerCards").src= "king_of_spades2.png";}	;
+if (card==7 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "7_of_clubs.png";}	;
+if (card==8 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "8_of_clubs.png";}	;
+if (card==9 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "9_of_clubs.png";}	;
+if (card==10 && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "10_of_clubs.png";}	;
+if (card2=="Jack" && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "jack_of_clubs2.png";}	;
+if (card2=="Queen" && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "queen_of_clubs2.png";}	;
+if (card2=="King" && suit=="Clubs"){
+	document.getElementById("dealerCards").src= "king_of_clubs2.png";}	;
+if (card2==7 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "7_of_diamonds.png";}	;
+if (card==8 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "8_of_diamonds.png";}	;
+if (card==9 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "9_of_diamonds.png";}	;
+if (card==10 && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "10_of_diamonds.png";}	;
+if (card2=="Jack" && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "jack_of_diamonds2.png";}	;
+if (card2=="Queen" && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "queen_of_diamonds2.png";}	;
+if (card2=="King" && suit=="Diamonds"){
+	document.getElementById("dealerCards").src= "king_of_diamonds2.png";}	;
+if (card2==7 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "7_of_hearts.png";}	;
+if (card==8 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "8_of_hearts.png";}	;
+if (card==9 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "9_of_hearts.png";}	;
+if (card2==10 && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "10_of_hearts.png";}	;
+if (card2=="Jack" && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "jack_of_hearts2.png";}	;
+if (card2=="Queen" && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "queen_of_hearts2.png";}	;
+if (card2=="King" && suit=="Hearts"){
+	document.getElementById("dealerCards").src= "king_of_hearts2.png";}	;
+
+
 form.you.value = eval(form.you.value) + PickACard("You");
 gameOver= -1; cardCount+=1;}
 }
@@ -223,11 +328,11 @@ if (gameOver ==0)
 else
 {cardCount+=1; form.say1.value=("You Get...");
 form.you.value = eval(form.you.value) + PickACard("You");}
-//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDD	
+//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD	
 if(form.you.value==21 && cardCount==2)						//thêm 
 {form.say1.value=("Blackjack! You win!");					//có blackjack
 gameOver=0; form.numgames.value=eval(form.numgames.value)+1;}			//là thắng 
-//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDD	D
+//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD
 if(form.you.value > 21)
 {form.say1.value=("You Busted!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
@@ -250,6 +355,9 @@ gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
  else
 {form.say1.value=("House Wins!"); form.say2.value=("Tough Luck!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
+
+
+
 }
 	  
 function setBj(){
@@ -267,8 +375,9 @@ window.onload = setBj;
 </head>
 
 <body>
+<a href="https://www.javascriptbank.com/blackjack.html">Original version</a>
 <form name="display">
-<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3" align="center"> <!--thêm align="center-->
+<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3" align="center" style="width:600px;height:115px"> <!--thêm align="center-->
 <tbody><tr>
 <td><center>Score:</center></td>
 <td><center>Dealer</center></td>
@@ -290,13 +399,15 @@ window.onload = setBj;
 </table>
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<div id="userDIV">
-	<p style="font-size:150%;font-family:Comic Sans MS:">Player 's cards</p>
-	<img id="userCards" scr="" style="width:150px;height:200px">
+<div id="userDIV" align= "center">
+	<p style="font-size:130%;font-family:Comic Sans MS:">Player 's card</p>
+	<!--<img id="" scr="Luser" style="width:140px;height:190px" align="left">
+	<img id="" scr="Ruser" style="width:140px;height:190px" align="right">-->
+	<img id="userCards" scr="" style="width:140px;height:190px">
 </div>
-<div id="dealerDIV">
-	 Dealer
-	 
+<div id="dealerDIV" align= "center">
+	 <p style="font-size:130%;font-family:Comic Sans MS:">Dealer 's first card</p>
+	<img id="dealerCards" scr="" style="width:140px;height:190px">
 </div>
 	
 
