--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -15,7 +15,7 @@
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>2TESTBlackjack</title>
+<title>GITHUBblackjack</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
