--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -5,23 +5,21 @@
 <style>	
 #userDIV {
     border: 1px solid black;
-    margin-bottom: 10px;
-	
+    margin-bottom: 10px;	
 }	
 #dealerDIV {
     border: 1px solid black;
     margin-bottom: 10px;
-	
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-<title>GITHUBblackjack</title>
+  <title>Blackjack-online</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
 var card2;	
  
-var counte; var i; var precard=[]; var presuit=[];                   //biến cho việc tránh bị lặp bài
+var counte; var i; var precard=[]; var presuit=[];                   //thêm biến cho việc tránh bị lặp bài
 
 var gameOver; var cardCount;
 function Shuffle(max){
@@ -55,10 +53,10 @@ return card;
 }
 	  
 function PickACard(strWho){
-card = Shuffle(12); //tại sao 12?????????????????????????????????????????????????????	
+card = Shuffle(12); //12?	
 suit = getSuit();
-//######################################################################################################thêm phần chống lặp bài
-counte+=1;                                   
+//######################################################################################################
+counte+=1;                                   //thêm phần chống lặp bàicounte+=1;                                   
 if (counte!=1){
 	for (i=1;i<counte;i++){
 		while (card==precard[i] && suit==presuit[i]){
@@ -73,7 +71,6 @@ card2=cardName(card);
 if(strWho =="You")
 {document.display.say2.value=(cardName(card) + " of " + suit);  //say2 là bài của người chơi
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-
  var x = document.createElement("IMG");
 if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình quân bài của player
 	x.setAttribute("src","ace_of_spades.png");};
@@ -179,143 +176,149 @@ if (card2=="Queen" && suit=="Hearts"){
 	x.setAttribute("src", "queen_of_hearts2.png");}	;
 if (card2=="King" && suit=="Hearts"){
 	x.setAttribute("src", "king_of_hearts2.png");}	;
-    x.setAttribute("width", "140");
-    x.setAttribute("height", "190");
-    x.setAttribute("alt", "card");
+	
+x.setAttribute("width", "140");
+x.setAttribute("height", "190");
+x.setAttribute("alt", "card");	
 document.getElementById("userDIV").appendChild(x);
- 
 // @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 }
 else {
-document.display.say1.value=(cardName(card) + " of " + suit);} //say1 là bài của máy (dealer)
+document.display.say1.value=(cardName(card) + " of " + suit);
+var x = document.createElement("IMG");
+if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình các quân bài của dealer
+	x.setAttribute("src","ace_of_spades.png");};
+if (card2=="Ace" && suit=="Clubs"){
+	x.setAttribute("src", "ace_of_clubs.png");};
+if (card2=="Ace" && suit=="Diamonds"){
+	x.setAttribute("src", "ace_of_diamonds.png");};
+if (card2=="Ace" && suit=="Hearts"){
+	x.setAttribute("src", "ace_of_hearts.png");};
+if (card==2 && suit=="Spades"){
+	x.setAttribute("src", "2_of_spades.png");};
+if (card==2 && suit=="Clubs"){
+	x.setAttribute("src", "2_of_clubs.png");};
+if (card==2 && suit=="Diamonds"){
+	x.setAttribute("src", "2_of_diamonds.png");};
+if (card==2 && suit=="Hearts"){
+	x.setAttribute("src", "2_of_hearts.png");};
+if (card==3 && suit=="Spades"){
+	x.setAttribute("src", "3_of_spades.png");};
+if (card==3 && suit=="Clubs"){
+	x.setAttribute("src", "3_of_clubs.png");};
+if (card==3 && suit=="Diamonds"){
+	x.setAttribute("src", "3_of_diamonds.png");};
+if (card==3 && suit=="Hearts"){
+	x.setAttribute("src","3_of_hearts.png");};
+if (card==4 && suit=="Spades"){
+	x.setAttribute("src", "4_of_spades.png");};
+if (card==4 && suit=="Clubs"){
+	x.setAttribute("src", "4_of_clubs.png");};
+if (card==4 && suit=="Diamonds"){
+	x.setAttribute("src", "4_of_diamonds.png");};
+if (card==4 && suit=="Hearts"){
+	x.setAttribute("src", "4_of_hearts.png");};
+if (card==5 && suit=="Spades"){
+	x.setAttribute("src", "5_of_spades.png");};
+if (card==5 && suit=="Clubs"){
+	x.setAttribute("src", "5_of_clubs.png");};
+if (card==5 && suit=="Diamonds"){
+	x.setAttribute("src", "5_of_diamonds.png");};
+if (card==5 && suit=="Hearts"){
+	x.setAttribute("src","5_of_hearts.png");};
+if (card==6 && suit=="Spades"){
+	x.setAttribute("src", "6_of_spades.png");}	;
+if (card==6 && suit=="Clubs"){
+	x.setAttribute("src", "6_of_clubs.png");}	;
+if (card==6 && suit=="Diamonds"){
+	x.setAttribute("src", "6_of_diamonds.png");}	;
+if (card==6 && suit=="Hearts"){
+	x.setAttribute("src", "6_of_hearts.png");}	;
+if (card==7 && suit=="Spades"){
+	x.setAttribute("src", "7_of_spades.png");}	;
+if (card==8 && suit=="Spades"){
+	x.setAttribute("src", "8_of_spades.png");}	;
+if (card==9 && suit=="Spades"){
+	x.setAttribute("src", "9_of_spades.png");}	;
+if (card==10 && suit=="Spades"){
+	x.setAttribute("src", "10_of_spades.png");}	;
+if (card2=="Jack" && suit=="Spades"){
+	x.setAttribute("src", "jack_of_spades2.png");}	;
+if (card2=="Queen" && suit=="Spades"){
+	x.setAttribute("src", "queen_of_spades2.png");}	;
+if (card2=="King" && suit=="Spades"){
+	x.setAttribute("src", "king_of_spades2.png");}	;
+if (card==7 && suit=="Clubs"){
+	x.setAttribute("src", "7_of_clubs.png");}	;
+if (card==8 && suit=="Clubs"){
+	x.setAttribute("src", "8_of_clubs.png");}	;
+if (card==9 && suit=="Clubs"){
+	x.setAttribute("src", "9_of_clubs.png");}	;
+if (card==10 && suit=="Clubs"){
+	x.setAttribute("src", "10_of_clubs.png");}	;
+if (card2=="Jack" && suit=="Clubs"){
+	x.setAttribute("src", "jack_of_clubs2.png");}	;
+if (card2=="Queen" && suit=="Clubs"){
+	x.setAttribute("src", "queen_of_clubs2.png");}	;
+if (card2=="King" && suit=="Clubs"){
+	x.setAttribute("src", "king_of_clubs2.png");}	;
+if (card2==7 && suit=="Diamonds"){
+	x.setAttribute("src", "7_of_diamonds.png");}	;
+if (card==8 && suit=="Diamonds"){
+	x.setAttribute("src", "8_of_diamonds.png");}	;
+if (card==9 && suit=="Diamonds"){
+	x.setAttribute("src", "9_of_diamonds.png");}	;
+if (card==10 && suit=="Diamonds"){
+	x.setAttribute("src", "10_of_diamonds.png");}	;
+if (card2=="Jack" && suit=="Diamonds"){
+	x.setAttribute("src", "jack_of_diamonds2.png");}	;
+if (card2=="Queen" && suit=="Diamonds"){
+	x.setAttribute("src", "queen_of_diamonds2.png");}	;
+if (card2=="King" && suit=="Diamonds"){
+	x.setAttribute("src", "king_of_diamonds2.png");}	;
+if (card2==7 && suit=="Hearts"){
+	x.setAttribute("src", "7_of_hearts.png");}	;
+if (card==8 && suit=="Hearts"){
+	x.setAttribute("src", "8_of_hearts.png");}	;
+if (card==9 && suit=="Hearts"){
+	x.setAttribute("src", "9_of_hearts.png");}	;
+if (card2==10 && suit=="Hearts"){
+	x.setAttribute("src", "10_of_hearts.png");}	;
+if (card2=="Jack" && suit=="Hearts"){
+	x.setAttribute("src", "jack_of_hearts2.png");}	;
+if (card2=="Queen" && suit=="Hearts"){
+	x.setAttribute("src", "queen_of_hearts2.png");}	;
+if (card2=="King" && suit=="Hearts"){
+	x.setAttribute("src", "king_of_hearts2.png");}	;
+	
+x.setAttribute("width", "140");
+x.setAttribute("height", "190");
+x.setAttribute("alt", "card");	
+document.getElementById("dealerDIV").appendChild(x);} //say1 là bài của máy (dealer)
 return cardValue(card,strWho);
 }
 	  
 function NewHand(form){  //bắt đầu ván mới, called khi ấn DEAL
 counte=0;
 //**********************************************************************************************
-var divUser = document.getElementById('userDIV');                          //thêm phần xóa các quân bài trước của người chơi để bắt đầu ván mới
+var divUser = document.getElementById('userDIV');                          //thêm phần xóa các quân bài trước của Player để bắt đầu ván mới
 while(divUser.firstChild){
-    divUser.removeChild(divUser.firstChild);
-}
+    divUser.removeChild(divUser.firstChild);};
+	
+var divDealer = document.getElementById('dealerDIV');                     //thêm phần xóa các quân bài trước của Dealer để bắt đầu ván mới
+while(divDealer.firstChild){
+    divDealer.removeChild(divDealer.firstChild);};
 //**********************************************************************************************
 if(gameOver !=0) //gameOver là biến kiểu boolean, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
 {form.say1.value=("Hand in Play!"); form.say2.value=(""); return;} 
 else
 {form.dealer.value = 0; form.you.value = 0; cardCount=0;
 form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");
-
-if (card2=="Ace" && suit=="Spades"){                                       //thêm phần hiện hình quân bài của Dealer
-	document.getElementById("dealerCards").src="ace_of_spades.png";};
-if (card2=="Ace" && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "ace_of_clubs.png";};
-if (card2=="Ace" && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "ace_of_diamonds.png";};
-if (card2=="Ace" && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "ace_of_hearts.png";};
-if (card==2 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "2_of_spades.png";};
-if (card==2 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "2_of_clubs.png";};
-if (card==2 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "2_of_diamonds.png";};
-if (card==2 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "2_of_hearts.png";};
-if (card==3 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "3_of_spades.png";};
-if (card==3 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "3_of_clubs.png";};
-if (card==3 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "3_of_diamonds.png";};
-if (card==3 && suit=="Hearts"){
-	document.getElementById("dealerCards").src="3_of_hearts.png";};
-if (card==4 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "4_of_spades.png";};
-if (card==4 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "4_of_clubs.png";};
-if (card==4 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "4_of_diamonds.png";};
-if (card==4 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "4_of_hearts.png";};
-if (card==5 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "5_of_spades.png";};
-if (card==5 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "5_of_clubs.png";};
-if (card==5 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "5_of_diamonds.png";};
-if (card==5 && suit=="Hearts"){
-	document.getElementById("dealerCards").src="5_of_hearts.png";};
-if (card==6 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "6_of_spades.png";}	;
-if (card==6 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "6_of_clubs.png";}	;
-if (card==6 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "6_of_diamonds.png";}	;
-if (card==6 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "6_of_hearts.png";}	;
-if (card==7 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "7_of_spades.png";}	;
-if (card==8 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "8_of_spades.png";}	;
-if (card==9 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "9_of_spades.png";}	;
-if (card==10 && suit=="Spades"){
-	document.getElementById("dealerCards").src= "10_of_spades.png";}	;
-if (card2=="Jack" && suit=="Spades"){
-	document.getElementById("dealerCards").src= "jack_of_spades2.png";}	;
-if (card2=="Queen" && suit=="Spades"){
-	document.getElementById("dealerCards").src= "queen_of_spades2.png";}	;
-if (card2=="King" && suit=="Spades"){
-	document.getElementById("dealerCards").src= "king_of_spades2.png";}	;
-if (card==7 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "7_of_clubs.png";}	;
-if (card==8 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "8_of_clubs.png";}	;
-if (card==9 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "9_of_clubs.png";}	;
-if (card==10 && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "10_of_clubs.png";}	;
-if (card2=="Jack" && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "jack_of_clubs2.png";}	;
-if (card2=="Queen" && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "queen_of_clubs2.png";}	;
-if (card2=="King" && suit=="Clubs"){
-	document.getElementById("dealerCards").src= "king_of_clubs2.png";}	;
-if (card2==7 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "7_of_diamonds.png";}	;
-if (card==8 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "8_of_diamonds.png";}	;
-if (card==9 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "9_of_diamonds.png";}	;
-if (card==10 && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "10_of_diamonds.png";}	;
-if (card2=="Jack" && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "jack_of_diamonds2.png";}	;
-if (card2=="Queen" && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "queen_of_diamonds2.png";}	;
-if (card2=="King" && suit=="Diamonds"){
-	document.getElementById("dealerCards").src= "king_of_diamonds2.png";}	;
-if (card2==7 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "7_of_hearts.png";}	;
-if (card==8 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "8_of_hearts.png";}	;
-if (card==9 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "9_of_hearts.png";}	;
-if (card2==10 && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "10_of_hearts.png";}	;
-if (card2=="Jack" && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "jack_of_hearts2.png";}	;
-if (card2=="Queen" && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "queen_of_hearts2.png";}	;
-if (card2=="King" && suit=="Hearts"){
-	document.getElementById("dealerCards").src= "king_of_hearts2.png";}	;
-
-
 form.you.value = eval(form.you.value) + PickACard("You");
 gameOver= -1; cardCount+=1;}
 }
 	  
-function Dealer(form){    //function để máy bốc bài, called khi ấn 'STAND'
+function Dealer(form){  //function để máy bốc bài, called khi ấn 'STAND'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
 else
@@ -325,21 +328,21 @@ else
 if (cardCount <2)  //cardCount để đếm bài của người chơi, tối thiểu người chơi phải có 2 quân
 {form.say1.value=("Minimum 2 Cards!"); form.say2.value=("Hit Again!"); return;}
 else
-while(form.dealer.value < 17) 		//máy bốc liên tiếp cho đến khi có >17 điểm
-{form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");}
+while(form.dealer.value < 17){ //máy bốc liên tiếp cho đến khi có >17 điểm
+form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");}
 }
-	  
-function User(form){        //player bốc bài, called khi ấn 'HIT'
+
+function User(form){   //player bốc bài, called khi ấn 'HIT'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
 else
 {cardCount+=1; form.say1.value=("You Get...");
 form.you.value = eval(form.you.value) + PickACard("You");}
 //AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD	
-if(form.you.value==21 && cardCount==2)						//thêm 
-{form.say1.value=("Blackjack! You win!");					//có blackjack
-gameOver=0; form.numgames.value=eval(form.numgames.value)+1;}			//là thắng 
-//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD
+if(form.you.value==21 && cardCount==2)						//thêm: có blackjack là thắng 
+{form.say1.value=("Blackjack! You win!");					
+gameOver=0; form.numgames.value=eval(form.numgames.value)+1;}	
+//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD
 if(form.you.value > 21)
 {form.say1.value=("You Busted!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
@@ -359,12 +362,9 @@ gameOver=0; form.numgames.value=eval(form.numgames.value)+1;}
  if(form.dealer.value == form.you.value)
 {form.say1.value=("Game Tied!"); form.say2.value=("Try Again!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
- else
-{form.say1.value=("House Wins!"); form.say2.value=("Tough Luck!");
+ else {
+form.say1.value=("House Wins!"); form.say2.value=("Tough Luck!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
-
-
-
 }
 	  
 function setBj(){
@@ -406,19 +406,16 @@ window.onload = setBj;
 </table>
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-
 <div id="dealerDIV" align= "center">
 	 <p style="font-size:130%;font-family:Comic Sans MS:">Dealer 's first card</p>
-	<img id="dealerCards" scr="" style="width:140px;height:190px">
+	<!--<img id="dealerCards" scr="" style="width:140px;height:190px">-->
 </div>
 <div id="userDIV" align= "center">
 	<p style="font-size:130%;font-family:Comic Sans MS:">Player 's card</p>
 	<!--<img id="" scr="Luser" style="width:140px;height:190px" align="left">
 	<img id="" scr="Ruser" style="width:140px;height:190px" align="right">-->
 	<!--<img id="userCards" scr="" style="width:140px;height:190px">-->
-</div>
-	
-
+</div>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 </body>
 </html>
