--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -10,10 +10,13 @@
 #dealerDIV {
     border: 1px solid black;
     margin-bottom: 10px;
-}	
+}
+body{
+		background-image: url("bg.png");
+}
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack-online</title>
+  <title>Blackjack-Online</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -407,11 +410,11 @@ window.onload = setBj;
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 <div id="dealerDIV" align= "center">
-	 <p style="font-size:130%;font-family:Comic Sans MS:">Dealer 's first card</p>
+	 <p style="font-size:130%;font-family:Monotype Corsiva;">Dealer 's first card</p>
 	<!--<img id="dealerCards" scr="" style="width:140px;height:190px">-->
 </div>
 <div id="userDIV" align= "center">
-	<p style="font-size:130%;font-family:Comic Sans MS:">Player 's card</p>
+	<p style="font-size:130%;font-family:Monotype Corsiva;">Player 's card</p>
 	<!--<img id="" scr="Luser" style="width:140px;height:190px" align="left">
 	<img id="" scr="Ruser" style="width:140px;height:190px" align="right">-->
 	<!--<img id="userCards" scr="" style="width:140px;height:190px">-->
