--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -410,11 +410,11 @@ window.onload = setBj;
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 <div id="dealerDIV" align= "center">
-	 <p style="font-size:130%;font-family:Monotype Corsiva;">Dealer 's first card</p>
+	 <p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Dealer 's first card</p>
 	<!--<img id="dealerCards" scr="" style="width:140px;height:190px">-->
 </div>
 <div id="userDIV" align= "center">
-	<p style="font-size:130%;font-family:Monotype Corsiva;">Player 's card</p>
+	<p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Player 's card</p>
 	<!--<img id="" scr="Luser" style="width:140px;height:190px" align="left">
 	<img id="" scr="Ruser" style="width:140px;height:190px" align="right">-->
 	<!--<img id="userCards" scr="" style="width:140px;height:190px">-->
