--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -410,10 +410,10 @@ window.onload = setBj;
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 <div id="dealerDIV" align= "center">
-	 <p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Dealer 's first card</p>
+	 <p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Dealer's cards</p>
 </div>
 <div id="userDIV" align= "center">
-	<p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Player 's card</p>
+	<p style="font-size:250%;font-family:Monotype Corsiva;color:BlanchedAlmond;">Your cards</p>
 </div>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 </body>
